<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView1"
                style="@style/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/summary" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView2"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportstart" />

            <TextView
                android:id="@+id/txtReportStartDate"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView3"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportend" />

            <TextView
                android:id="@+id/txtReportEndDate"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView4"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowestweight" />

            <TextView
                android:id="@+id/txtReportLowestWeight"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView5"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowestdate" />

            <TextView
                android:id="@+id/txtReportLowestDate"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView6"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highestweight" />

            <TextView
                android:id="@+id/txtReportHighestWeight"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView7"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highestdate" />

            <TextView
                android:id="@+id/txtReportHighestDate"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView8"
                style="@style/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/averageweight" />

            <TextView
                android:id="@+id/txtReportAverageWeight"
                style="@style/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/btnBack"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/back" />
        </TableRow>
    </TableLayout>

</ScrollView>