<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/textView1"
                style="@style/heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_new_entry" />
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntryWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/weight"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntryHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Spinner
                android:id="@+id/spinHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/string_hours_of_sleep" />
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntryQualityofSleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Spinner
                android:id="@+id/spinQualityofSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntryEnergyLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Spinner
                android:id="@+id/spinEnergyLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntryFitness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/txtFitness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/string_fitness"
                android:inputType="textMultiLine"
                android:lines="4" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntryNutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/txtNutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/string_nutrition"
                android:inputType="textMultiLine"
                android:lines="4" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntrySymptom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Spinner
                android:id="@+id/spinSymptom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/rowAddEntrySymptomDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <EditText
                android:id="@+id/txtSymptomDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/string_symtpom_description"
                android:inputType="textMultiLine"
                android:lines="4" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/btnSave"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveentry" />
        </TableRow>
    </TableLayout>

</ScrollView>